# pythonjsx

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  requirements-dev.txt  setup.py
benchmarks/: _bench_common.py  bench_compile.py  bench_django.py  bench_jinja2.py  bench_pythonjsx.py
examples/: example.px  generators.px  hello.px
grammar/: .gitignore  Makefile  binding.gyp  grammar.js  package.json
grammar/src/: parser.c  scanner.c
grammar/test/corpus/: jsx_basic.txt
pythonjsx/: __init__.py  __main__.py  _compiler_discovery.py  _native_cy.pyi  codec.py  importer.py  runtime.py
runtime-cy/: _native_cy.pyx  escape.pxi  template.pxi
src/: cli.rs  formatter.rs  lib.rs  main.rs  main_format.rs  main_lsp.rs  parser.rs
src/compiler/: chunks.rs  emitter.rs  error.rs  html_entities.rs  mod.rs  opcodes.rs  settings.rs  sourcemap.rs  visitor.rs
src/lsp/: mapping.rs  mod.rs  server.rs  stream.rs  types.rs
tests/: compile_tests.rs  error_position_tests.rs  formatter_cli_tests.rs  invalid_syntax_tests.rs  lsp_integration_tests.rs  sourcemap_tests.rs
tests/python/: test_codec.py  test_compiler_discovery.py  test_e2e.py  test_format_cli.py  test_importer.py  test_template_runtime.py
tests/python/e2e/: attributes.px  attributes.txt  attrs_edge_cases.px  attrs_edge_cases.txt  boolean_attr.px  boolean_attr.txt  complex_nested.px  complex_nested.txt  component.px  component.txt  conditional_component.px  conditional_component.txt  doctype.px  doctype.txt  doctype_custom_prefix.px  doctype_custom_prefix.txt  escaping.px  escaping.txt  expressions.px  expressions.txt  fragment.px  fragment.txt  hello.px  mixed_children.px  mixed_children.txt  nesting.px  nesting.txt  (+14 more)
