[package]
name = "pythonjsx"
version = "0.1.0"
edition = "2021"
description = "PythonJSX (.px) compiler and LSP"
exclude = []

[lib]
doctest = false

[[bin]]
name = "pythonjsx"
path = "src/main.rs"

[[bin]]
name = "pythonjsx-langserver"
path = "src/main_lsp.rs"

[[bin]]
name = "pythonjsx-format"
path = "src/main_format.rs"

[dependencies]
tree-sitter = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
thiserror = "2.0"
tempfile = "3.14"
crossbeam-channel = "0.5"
url = "2.5.8"
shell-words = "1.1.1"

[build-dependencies]
cc = "1.0"
